# sokodoko

./: Dockerfile  LICENSE  README.md  config.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/sokodoko/: bot.py  config.py  db.py  geojson.py  lang.py  logger.py  main.py  msg_parser.py
